// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RendererSelector should render grid list 1`] = `
<VirtualizedList(ListGrid)
  collection={
    Array [
      Object {
        "description": "Simple row with icon and actions",
        "id": 0,
        "name": "Title with icon and actions",
      },
      Object {
        "description": "Simple row without actions",
        "id": 1,
        "name": "Title without actions",
      },
    ]
  }
  height={600}
  id="my-list-id"
  isActive={[Function]}
  isSelected={[Function]}
  noRowsRenderer={[Function]}
  onRowClick={[Function]}
  rowHeight={50}
  rowRenderer={[Function]}
  selectionToggle={[Function]}
  width={1024}
>
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="id"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Id"
    style={Object {}}
    width={50}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Name"
    style={Object {}}
    width={350}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Description"
    style={Object {}}
    width={350}
  />
</VirtualizedList(ListGrid)>
`;

exports[`RendererSelector should render table list by default 1`] = `
<VirtualizedList(ListTable)
  collection={
    Array [
      Object {
        "description": "Simple row with icon and actions",
        "id": 0,
        "name": "Title with icon and actions",
      },
      Object {
        "description": "Simple row without actions",
        "id": 1,
        "name": "Title without actions",
      },
    ]
  }
  disableHeader={false}
  height={600}
  id="my-list-id"
  isActive={[Function]}
  isSelected={[Function]}
  noRowsRenderer={[Function]}
  onRowClick={[Function]}
  rowHeight={50}
  selectionToggle={[Function]}
  sort={[Function]}
  sortBy="name"
  sortDirection="DESC"
  width={1024}
>
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="id"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Id"
    style={Object {}}
    width={50}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Name"
    style={Object {}}
    width={350}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Description"
    style={Object {}}
    width={350}
  />
</VirtualizedList(ListTable)>
`;

exports[`RendererSelector should render table list when requested 1`] = `
<VirtualizedList(ListTable)
  collection={
    Array [
      Object {
        "description": "Simple row with icon and actions",
        "id": 0,
        "name": "Title with icon and actions",
      },
      Object {
        "description": "Simple row without actions",
        "id": 1,
        "name": "Title without actions",
      },
    ]
  }
  disableHeader={false}
  height={600}
  id="my-list-id"
  isActive={[Function]}
  isSelected={[Function]}
  noRowsRenderer={[Function]}
  onRowClick={[Function]}
  rowHeight={50}
  selectionToggle={[Function]}
  sort={[Function]}
  sortBy="name"
  sortDirection="DESC"
  width={1024}
>
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="id"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Id"
    style={Object {}}
    width={50}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Name"
    style={Object {}}
    width={350}
  />
  <Column
    cellDataGetter={[Function]}
    cellRenderer={[Function]}
    dataKey="name"
    flexGrow={0}
    flexShrink={0}
    headerRenderer={[Function]}
    label="Description"
    style={Object {}}
    width={350}
  />
</VirtualizedList(ListTable)>
`;

exports[`RendererSelector should render the grid with the default NoRows 1`] = `
<NoRows
  t={[Function]}
/>
`;

exports[`RendererSelector should render the grid with the default NoRows 2`] = `
<NoRows
  t={[Function]}
/>
`;

exports[`RendererSelector should render the table with the noRowsRenderer 1`] = `<NoRowsRenderer />`;

exports[`RendererSelector should render the table with the noRowsRenderer 2`] = `<NoRowsRenderer />`;
